--- a/style.css
+++ b/style.css
@@ -94,6 +94,11 @@ form {
   padding: 10px;
 }
 
+form div {
+  display: flex;
+  justify-content: space-between;
+}
+
 form label {
   font-weight: bold;
 }
@@ -111,6 +116,7 @@ form button {
   font-size: 24px;
   padding: 15px;
   width: 100%;
+  max-width: 100px;
 }
 
 /* -------  Footer ------- */
@@ -127,7 +133,7 @@ footer p {
 
 /* -------  Media Query ------- */
 
-@media all and (min-width: 600px) {
+@media all and (min-width: 480px) {
   header {
     display: flex;
     justify-content: space-between;
@@ -136,5 +142,17 @@ footer p {
 
   header .logo {
     font-size: 42px;
+  }
+
+  form {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  form div {
+    display: flex;
+    flex-direction: column;
   }
 }
