--- a/style.css
+++ b/style.css
@@ -92,11 +92,17 @@ header nav ul li a:hover {
 form {
   border: 2px solid #ff385c;
   padding: 10px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 form div {
   display: flex;
   justify-content: space-between;
+  width: 100%;
+  margin-bottom: 20px;
 }
 
 form label {
@@ -105,7 +111,6 @@ form label {
 
 form select,
 form input {
-  margin-bottom: 20px;
   width: 180px;
 }
 
@@ -154,5 +159,8 @@ footer p {
   form div {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    width:fit-content;
+    margin: 0;
   }
 }
